# zebra-sdk-kotlin-wrapper

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: DeeplinkSamples.html  EMDKConfig.xml
app/src/main/cpp/: CMakeLists.txt  crash_generator.c
emdk_kotlin_wrapper/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
emdk_kotlin_wrapper/gradle/: libs.versions.toml
emdk_kotlin_wrapper/src/main/: AndroidManifest.xml
emdk_kotlin_wrapper/src/main/assets/: barcode_intent_advanced_create.json  barcode_intent_advanced_update.json  bind_profile_to_app.json  bundle_create_profile.json  bundle_update_profile.json  exported_barcode_intent.txt  exported_ocr_workflow.txt  plugin_bdf.json  plugin_intent.json  plugin_intent_secure.json  plugin_keystroke.json  plugin_scanner.json  plugin_workflow.json  profile_access_manager_allow_call_service.xml  profile_access_manager_allow_permission.xml  profile_app_manager_disable.xml  profile_app_manager_install_and_start.xml  profile_barcode_input_intent_output.json  profile_battery_manager_set_critical_low_threshold.xml  profile_clock_reset_auto.xml  profile_clock_set.xml  profile_datawedge_manager_import_profile.xml  profile_remove.xml  (+20 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
stagenow/: access_oeminfo.xml  debug_certificate.crt  map_scan_key.xml  uncontrol_dw_api.xml  whitelist_app_access_dw_api.xml
(+188 files in other folders)
