cmake_minimum_required(VERSION 3.18.1)

project("ZebraKotlinDemo")

add_library( # Sets the name of the library.
        native-lib

        # Sets the library as a shared library.
        SHARED

        # Provides a relative path to your source file(s).
        crash_generator.c )

find_library( # Sets the name of the path variable.
        log-lib

        # Specifies the name of the NDK library that
        # you want CMake to locate.
        log )

target_link_libraries( # Specifies the target library.
        native-lib

        # Links the target library to the log library
        # specified by the path variable.
        ${log-lib} )
